# JADE-WEB-APP

./: .gitignore  LICENSE  README.md  app_streamlit.py  requirements.txt  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: pytest.yml
docs/: json_structure.md
jadewa/: app.py  app_dash.py  app_streamlit.py  errors.py  main.py  plotter.py  processor.py  status.py  utils.py
jadewa/resources/: ASPIS-Fe88.json  ASPIS-PCA-Replica.json  ASPIS-PCA-Replica_RR.json  ASPIS-PCA-Replica_flux.json  C-Model.json  C_Model.json  FNG-BKT.json  FNG-HCPB.json  FNG-SDDR.json  FNG-SS.json  FNG-SiC.json  FNG-W.json  FNS-TOF.json  HCPB_TBM_1D.json  IPPE-CF.json  IPPE-DT.json  ITER_1D.json  ITER_Cyl_SDDR.json  Oktavian.json  RCR-SS.json  RCR-Sphere.json  Sphere.json  SphereSDDR.json  TUD-FNG.json  TUD-Fe.json  TUD-W.json  Tiara-BC.json  Tiara-BS.json  Tiara-FC.json  WCLL_TBM_1D.json  supported_tallies.json
tests/: app_dash_test.py  app_streamlit_test.py  app_test.py  plotter_test.py  processor_test.py  status_test.py  utils_test.py
tests/resources/status/root/_d1s_-_D1SUNED (FENDL 3.1d+EAF2007)_/FNG-SDDR/: FNG-SDDR_1 SDDR in air (daughters) irr. 1.csv  FNG-SDDR_1 SDDR in air irr. 1.csv  FNG-SDDR_2 SDDR in air (daughters) irr. 2.csv  FNG-SDDR_2 SDDR in air irr. 2.csv  metadata.json
tests/resources/status/root/_d1s_-_D1SUNED (FENDL 3.1d+EAF2007)_/SphereSDDR/: SphereSDDR_9019_F-19_16 Leakage neutron flux.csv  metadata.json
tests/resources/status/root/_mcnp_-_ENDFB-VIII.0_/C-Model/: C-Model Neutron current on plasma boundary.csv  (+1 more)
(+133 files in other folders)
