[metadata]
name = jadewa
# version = attr: f4enix.__version__
author = F4E neutronics team
author_email = sc-radiationtransport@f4e.europa.eu
description = Web-app for the visualization of JADE results 
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:

python_requires = >=3.10
install_requires =
    # dash
    streamlit

[options.extra_require]
dev =
    pytest
    pytest-cov
    pytest-mock